# document_analyzer

./: .env.example  .gitignore  LICENSE  README.md  conditions_output.json  facts_output.json  pair_check_output.json  pyproject.toml
config/: default.yaml
config/prompts/: condition_extraction_prompt.txt  critic_prompt.txt  default_analysis_prompt.txt  fact_extraction_prompt.txt  fact_extraction_prompt_for_fine_grained_extraction.txt  pair_check_prompt.txt  should_extract_prompt.txt  system_prompt.txt
document_analyzer/: __init__.py  api.py  api_v2.py  cli.py
document_analyzer/cli/: __init__.py  __main__.py
document_analyzer/cli/commands/: check.py  serve.py
document_analyzer/cli/handlers/: config.py  extraction.py  pair_check.py
document_analyzer/core/: analyzer.py  condition_driven.py  extractor.py  file_handler.py  pair_check.py  pair_checker.py  processor.py  prompt_generator.py  report.py  response_parser.py  structure_analyzer.py
document_analyzer/file_processors/: __init__.py  image_processor.py  office_processor.py  pdf_processor.py
document_analyzer/llm/: __init__.py  base.py  gemini.py  openai.py  other.py
document_analyzer/utils/: config.py  encoding.py  logging.py
sample_input/weekly_report_check/: compliant_report.txt  config.yaml  config_gemini.yaml  non_compliant_report.txt  writing_guidelines.txt
tests/: test_cli.py  test_config.py  test_core.py  test_llm.py
